# neural

./: .gitignore  CCIPCA.py  bp.py  bp_old.py  ica.py  pca.py  pyproject.toml  rbf.py  rbf_old.py  som.py  som_old.py  svm.py  test.py
homework1/: RBFN.py  bp.py  rbf.py  svm.py
homework2/: CCIPCA.py  PCA_data.py  out.txt  pca.py  test.py
homework3/: bp.py  rbf.py  svm.py
homework4/: fast_ica.py  ica.py
homework5/: som.py
homework6/: tsp.py
